@@ -7,6 +7,8 @@ v0.3.8-dev, 2012-02-26
 Version 0.3.8 (under dev!)
 --------------------------
 
+* irc: add search for lower case nicks in option irc.look.nick_color_force
+
 Version 0.3.7 (2012-02-26)
 --------------------------
 
